<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:layout_marginTop="20dp"
    tools:context=".DetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:background="#F2EDEC"
        android:paddingHorizontal="120dp"
        android:paddingVertical="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/detail_ruangan"
        android:id="@+id/judul"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ruangan"
        android:id="@+id/judul_ruangan"/>

    <TextView
        android:id="@+id/ruangan"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:hint="@string/ruangan"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gedung"
        android:id="@+id/judul_gedung"/>


    <TextView
        android:id="@+id/gedung"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:hint="@string/gedung"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kapasitas"
        android:id="@+id/judul_kapasitas"/>

    <TextView
        android:id="@+id/kapasitas"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:hint="@string/kapasitas"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

</LinearLayout>